--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,12 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_size = 2
 
+[*.ts]
+quote_type = single
+
+[*.js]
+quote_type = single
+
 [*.md]
 indent_size = 4
 trim_trailing_whitespace = false
