--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "jasmine-awesome-report": "^0.1.0",
     "jasmine-spec-reporter": "^7.0.0",
     "protractor": "^7.0.0",
     "typescript": "^4.4.4"
